add header and footer components

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,19 @@
-<p>
-  footer works!
-</p>
+<footer class="footer">
+  <div class="footer__inner">
+    <div class="footer__inner-top">
+      <ul class="footer__menu">
+        <li class="footer__menu-item"><a class="footer__menu-link" href="#"> Terms and Conditions</a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Privacy Policy</a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Contacts and Support </a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" href="#">About us</a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Submit a coin for listing</a></li>
+        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Referral</a></li>
+      </ul>
+      <div class="footer__app-wrap">
+        <div class="footer__app-title">Mobile applications:</div>
+        <div class="footer__app-link-wrap"><a class="footer__app-link" href="#"><img class="footer__app-img" src="../../assets/img/g-play.svg" alt="google-display"></a><a class="footer__app-link" href="#"><img class="footer__app-img" src="../../assets/img/app-store.svg" alt="app-store"></a></div>
+      </div>
+    </div>
+    <div class="footer__copy">© 2018 EXRATES LTD trade marks belong to their corresponding owners. All rights are reserved</div>
+  </div>
+</footer>
