--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,8 +18,10 @@
       <li class="menu__item"><a class="menu__link" href="#"><span class="menu__link-text">News</span></a></li>
     </ul>
     <ul class="menu">
-      <li class="menu__item menu__item--with-submenu"><a class="menu__link" href="#">
-        <div class="menu__link-icon-wrap"><img class="header-button__img" src="../../assets/img/header-notification.svg" alt="notification"><span class="header-button__notification-label">1</span></div></a>
+      <li class="menu__item menu__item--with-submenu">
+        <a class="menu__link" href="#">
+          <div class="menu__link-icon-wrap"><img class="header-button__img" src="../../assets/img/header-notification.svg" alt="notification"><span class="header-button__notification-label">1</span></div>
+        </a>
         <div class="submenu submenu--notification">
           <ul class="menu submenu__list">
             <li class="submenu__item"><a class="submenu__link" href="#"><span class="menu__link-text">You received 0.01 BTC by inner transfer</span></a></li>
@@ -32,19 +34,27 @@
           </ul>
         </div>
       </li>
-      <li class="menu__item"><a class="menu__link" href="#">
-        <div class="menu__link-icon-wrap"><img class="header-button__img" src="../../assets/img/header-learn.svg" alt="learn"></div></a></li>
-      <li class="menu__item"><a class="menu__link" href="#">
-        <div class="menu__link-icon-wrap"><img class="header-button__img" src="../../assets/img/header-lamp.svg" alt="Theme"></div></a></li>
+      <li class="menu__item">
+        <a class="menu__link" href="#">
+          <div class="menu__link-icon-wrap"><img class="header-button__img" src="../../assets/img/header-learn.svg" alt="learn"></div>
+        </a>
+      </li>
+      <li class="menu__item">
+        <a class="menu__link" href="#">
+          <div class="menu__link-icon-wrap"><img class="header-button__img" src="../../assets/img/header-lamp.svg" alt="Theme"></div>
+        </a>
+      </li>
     </ul>
     <ul class="menu">
-      <li class="menu__item menu__item--with-submenu"><a class="menu__link" href="">
-        <div class="holdings"><span class="holdings__title">Estimated Holdings</span>
-          <div class="holdings__info">
-            <div class="holdings__info-item"><img class="holdings__info-item-icon" src="../../assets/img/btc-icon-small.svg" alt="btc"> 1.22764</div>
-            <div class="holdings__info-item"><img class="holdings__info-item-icon" src="../../assets/img/dollar-icon-small.svg" alt="dollar"> 43 522 764</div>
+      <li class="menu__item menu__item--with-submenu">
+        <a class="menu__link" href="">
+          <div class="holdings"><span class="holdings__title">Estimated Holdings</span>
+            <div class="holdings__info">
+              <div class="holdings__info-item"><img class="holdings__info-item-icon" src="../../assets/img/btc-icon-small.svg" alt="btc"> 1.22764</div>
+              <div class="holdings__info-item"><img class="holdings__info-item-icon" src="../../assets/img/dollar-icon-small.svg" alt="dollar"> 43 522 764</div>
+            </div>
           </div>
-        </div></a>
+        </a>
         <div class="submenu">
           <div class="holdings-mob__pairs holdings-mob__pairs--active">
             <div class="holdings-mob__pairs-row"><span class="holdings-mob__pairs-row-title">Fiat</span>
