--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@
 //@import "./assets/scss/button";
 //@import "./assets/scss/requests";
 //@import "./assets/scss/notification-popup";
-//@import "./assets/scss/wrap-input";
+@import "./assets/scss/wrap-input";
 //@import "./assets/scss/toggler-button";
 //@import "./assets/scss/dropdown";
 //@import "./assets/scss/table-top";
