--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -126,3 +126,45 @@
   </div>
 </header>
 <!-- HEADER END-->
+<!-- HEADER START-->
+<header class="header-mob">
+  <div class="heder-mob__top">
+    <div class="header-mob__burger-content">
+      <div class="header-mob__controls-row"><a class="header-mob__controls-btn" href="#"><img class="header-mob__controls-icon" src="../../assets/img/header-mob-lamp.svg"></a><a class="header-mob__controls-btn" href="#"><img class="header-mob__controls-icon" src="../../assets/img/header-mob-notification.svg"></a>
+        <a
+          class="header-mob__controls-btn" href="#"><img class="header-mob__controls-icon" src="../../assets/img/header-mob-settings.svg"></a>
+      </div>
+      <div class="account-info"><img class="account-info__img" src="../../assets/img/user-photo.png">
+        <div class="account-info__text">
+          <div class="account-info__title">John Doe</div><a class="account-info__email" href="#">john.doe@exrates.com</a>
+        </div>
+      </div>
+      <nav class="menu-mob"><a class="menu-mob__link menu-mob__link--next-page" href="#"><img class="menu-mob__link-icon" src="../../assets/img/money-bag.svg"><span class="menu-mob__link-text">Estimated holdings</span><span class="menu-mob__link-holdings-inf">~ $43 522 764</span></a>
+        <a
+          class="menu-mob__link" href="#"><img class="menu-mob__link-icon" src="../../assets/img/trade.svg"><span class="menu-mob__link-text">Trade</span></a>
+          <div class="menu-mob__drop-wrap"><a class="menu-mob__link menu-mob__link--drop" href="#"><img class="menu-mob__link-icon" src="../../assets/img/piggy-bank.svg"><span class="menu-mob__link-text">Funds</span></a>
+            <div class="menu-mob__wrap-hidden-links"><a class="menu-mob__link" href="#">Transaction history</a><a class="menu-mob__link" href="#">Income/Outcome</a></div>
+          </div>
+          <div class="menu-mob__drop-wrap"><a class="menu-mob__link menu-mob__link--drop" href="#"><img class="menu-mob__link-icon" src="../../assets/img/orders.svg"><span class="menu-mob__link-text">Orders</span></a>
+            <div class="menu-mob__wrap-hidden-links"><a class="menu-mob__link" href="#">Open orders</a><a class="menu-mob__link" href="#">Orders history</a></div>
+          </div>
+          <div class="menu-mob__drop-wrap"><a class="menu-mob__link menu-mob__link--drop" href="#"><img class="menu-mob__link-icon" src="../../assets/img/referral.svg"><span class="menu-mob__link-text">Referral</span></a>
+            <div class="menu-mob__wrap-hidden-links"><a class="menu-mob__link" href="#">Lorem</a><a class="menu-mob__link" href="#">Lorem</a></div>
+          </div><a class="menu-mob__link" href="#"><img class="menu-mob__link-icon" src="../../assets/img/newspaper.svg"><span class="menu-mob__link-text">News</span></a>
+      </nav>
+    </div>
+  </div>
+  <div class="header-mob__inner">
+    <div class="header-mob__submenu"><a class="header-mob__submenu-link"><img class="header-mob__submenu-link-img" src="../../assets/img/header-sumbenu-link1.svg"><span class="header-mob__submenu-link-text">Graph</span></a><a class="header-mob__submenu-link" href="#"><img class="header-mob__submenu-link-img" src="../../assets/img/trade.svg"><span class="header-mob__submenu-link-text">Trade</span></a>
+      <a
+        class="header-mob__submenu-link" href="index.html"><img class="header-mob__submenu-link-img" src="../../assets/img/wallet.svg"><span class="header-mob__submenu-link-text">Balances</span></a><a class="header-mob__submenu-link"><img class="header-mob__submenu-link-img" src="../../assets/img/header-sumbenu-link4.svg"><span class="header-mob__submenu-link-text">History</span></a>
+        <a
+          class="header-mob__submenu-link"><img class="header-mob__submenu-link-img" src="../../assets/img/orders.svg"><span class="header-mob__submenu-link-text">Open</span></a><a class="header-mob__submenu-link"><img class="header-mob__submenu-link-img" src="../../assets/img/markets.svg"><span class="header-mob__submenu-link-text">Markets</span></a>
+          <a
+            class="header-mob__submenu-link"><img class="header-mob__submenu-link-img" src="../../assets/img/header-sumbenu-link3.svg"><span class="header-mob__submenu-link-text">Book</span></a><a class="header-mob__submenu-link"><img class="header-mob__submenu-link-img" src="../../assets/img/header-sumbenu-link6.svg"><span class="header-mob__submenu-link-text">Chat</span></a></div>
+    <a
+      class="header-mob__link header-mob__link-burger" >
+      <div class="header-mob__link-inner"><img class="header-mob__link-img" src="../../assets/img/header-mob-burger.svg"></div>
+      </a>
+  </div>
+</header>
