--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <div class="page-wrap">
   <app-header></app-header>
-  <!-- <app-header-mobile></app-header-mobile> -->
-  <!-- <app-footer></app-footer> -->
+  <div class="content">
+
+    <router-outlet></router-outlet>
+
+  </div>
+  <app-footer></app-footer>
 </div>
