add setting routing

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
         </div>
       </li>
       <li class="menu__item"><a class="menu__link" href="#"><span class="menu__link-text">Orders</span></a></li>
-      <li class="menu__item"><a class="menu__link" href="#"><span class="menu__link-text">Settings</span></a></li>
+      <li class="menu__item"><a class="menu__link" routerLink="/settings"><span class="menu__link-text">Settings</span></a></li>
       <li class="menu__item"><a class="menu__link" href="#"><span class="menu__link-text">Referral</span></a></li>
       <li class="menu__item"><a class="menu__link" href="#"><span class="menu__link-text">News</span></a></li>
     </ul>
