--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -1,3 +1,38 @@
-<p>
-  password works!
-</p>
+<!-- <div class="content content--settings"> -->
+  <div class="settings-sidebar">
+    <div class="page-title settings-sidebar__title">
+      <h1 class="page-title__text">Settings     </h1>
+    </div>
+    <ul class="settings-menu">
+      <li class="settings-menu__item"><a class="settings-menu__link" href="settings-2fa.html">Two-Factor Authentication</a></li>
+      <li class="settings-menu__item"><a class="settings-menu__link settings-menu__link--active" href="settings-pass.html">Password</a></li>
+      <li class="settings-menu__item"><a class="settings-menu__link" href="settings-time.html">Session Time</a></li>
+      <li class="settings-menu__item"><a class="settings-menu__link" href="settings-nickname.html">Add Nickname</a></li>
+      <li class="settings-menu__item"><a class="settings-menu__link" href="settings-identity.html">Identity verification</a></li>
+      <li class="settings-menu__item"><a class="settings-menu__link" href="settings-email-notif.html">Email Notifications</a></li>
+      <li class="settings-menu__item"><a class="settings-menu__link" href="settings-view.html">View</a></li>
+    </ul>
+  </div>
+  <div class="settings-content">
+    <h3 class="settings-content__title settings-content__title--mb32">Change password</h3>
+    <form class="settings-form">
+      <div class="settings-form__row">
+        <div class="wrap-input settings-form__wrap-input">
+          <input class="input" type="text" required="">
+          <label class="wrap-input__label">Current password</label>
+          <div class="wrap-input__line"></div><span class="wrap-input__show-password"></span><span class="wrap-input__valid">This nickname already taken. Please take another one</span>
+        </div><span class="settings-form__input-notice">for safety, to confirm that you it is you </span>
+      </div>
+      <div class="settings-form__row">
+        <div class="wrap-input settings-form__wrap-input">
+          <input class="input" type="text" required="">
+          <label class="wrap-input__label">New password</label>
+          <div class="wrap-input__line"></div><span class="wrap-input__show-password"></span><span class="wrap-input__valid">This nickname already taken. Please take another one</span>
+        </div><span class="settings-form__input-notice">should have 8 chars at least, symbols and numbers </span>
+      </div>
+      <button class="button settings-form__button settings-form__button--mt32">Change password</button>
+    </form>
+  </div>
+  <div class="notification-popup change-pass-notif"><img class="notification-popup__icon" src="../../../assets/img/key.svg"><img class="notification-popup__close notification-popup__close--mob" src="../../../assets/img/close-grey.svg" alt="close"> Password sucessfully changed<img class="notification-popup__close" src="../../../assets/img/close-blue.svg"
+      alt="close"></div>
+<!-- </div> -->
