--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="content">
 
     <router-outlet></router-outlet>
-
+    <a class="chat" href="#"> <img class="chat__icon" src="../../../assets/img/help.svg"></a>
   </div>
   <app-footer></app-footer>
 </div>
