--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,23 +7,23 @@
 @import "./assets/scss/animations";
 @import "./assets/scss/layout";
 /*----- CONTENT -----*/
-//@import "./assets/scss/page-title";
-//@import "./assets/scss/button";
+@import "./assets/scss/page-title";
+@import "./assets/scss/button";
 //@import "./assets/scss/requests";
 //@import "./assets/scss/notification-popup";
 @import "./assets/scss/wrap-input";
-//@import "./assets/scss/toggler-button";
+@import "./assets/scss/toggler-button";
 //@import "./assets/scss/dropdown";
 //@import "./assets/scss/table-top";
 //@import "./assets/scss/table";
 //@import "./assets/scss/under-table";
 //@import "./assets/scss/paginator";
 //@import "./assets/scss/popup";
-//@import "./assets/scss/settings";
+@import "./assets/scss/settings";
 //@import "./assets/scss/open-balance-mob";
-//@import "./assets/scss/radio-btn";
-//@import "./assets/scss/select";
+@import "./assets/scss/radio-btn";
+@import "./assets/scss/select";
 /*----- CONTENT END -----*/
 //@import "./assets/scss/footer";
 //@import "./assets/scss/modal";
-//@import "./assets/scss/chat-btn";
+@import "./assets/scss/chat-btn";
