--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,17 +1,62 @@
+ <div class="content content--settings">
+<div class="settings-sidebar">
+  <div class="page-title settings-sidebar__title">
+    <h1 class="page-title__text">Settings     </h1>
+  </div>
+  <ul class="settings-menu">
+    <li class="settings-menu__item">
+      <a class="settings-menu__link"
+         [routerLinkActive]="['settings-menu__link--active']"
+         [routerLink]="['/settings/two-factor-auth']">
+        Two-Factor Authentication
+      </a>
+    </li>
+    <li class="settings-menu__item">
+      <a class="settings-menu__link"
+         [routerLinkActive]="['settings-menu__link--active']"
+         [routerLink]="['/settings/password']">
+        Password
+      </a>
+    </li>
+    <li class="settings-menu__item">
+      <a class="settings-menu__link"
+         [routerLinkActive]="['settings-menu__link--active']"
+         [routerLink]="['/settings/session']">
+        Session Time
+      </a>
+    </li>
+    <li class="settings-menu__item">
+      <a class="settings-menu__link"
+         [routerLinkActive]="['settings-menu__link--active']"
+         [routerLink]="['/settings/nickname']">
+        Add Nickname
+      </a>
+    </li>
+    <li class="settings-menu__item">
+      <a class="settings-menu__link"
+         [routerLinkActive]="['settings-menu__link--active']"
+         [routerLink]="['/settings/verification']">
+        Identity verification
+      </a>
+    </li>
+    <li class="settings-menu__item">
+      <a class="settings-menu__link"
+         [routerLinkActive]="['settings-menu__link--active']"
+         [routerLink]="['/settings/e-notification']">
+        Email Notifications
+      </a>
+    </li>
+    <li class="settings-menu__item">
+      <a class="settings-menu__link"
+         [routerLinkActive]="['settings-menu__link--active']"
+         [routerLink]="['/settings/view']">
+        View
+      </a>
+    </li>
+  </ul>
+</div>
 
-
-
-
-
-
-
-
-
-      <a [routerLink]="['/settings/two-factor-auth']">Two-Factor Authentication</a><br>
-      <a [routerLink]="['/settings/password']">Password</a><br>
-      <a [routerLink]="['/settings/session']">Session time</a><br>
-      <a [routerLink]="['/settings/nickname']">Add nickname</a><br>
-      <a [routerLink]="['/settings/verification']">Identify verification</a><br>
-      <a [routerLink]="['/settings/e-notification']">Email notification</a><br>
-      <a [routerLink]="['/settings/view']">View</a><br>
-
+<div>
+  <router-outlet></router-outlet>
+</div>
+ </div>
