--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -45,6 +45,7 @@ b{
   margin: 0 auto;
   padding: 12px 0px 60px;
   min-height: 100%;
+  height: 100%;
   @media (min-width:600px) {
     padding: 32px 12px 60px;
 
@@ -55,21 +56,25 @@ b{
 
   }
   &--settings{
-    display: -webkit-flex;
-    display: -ms-flex;
-    display: flex;
-    padding-top: 0;
-    flex-direction: column;
-    justify-content: space-between;
-    @media (min-width:600px) {
-      padding-left: 0;
-      padding-right: 0;
-    }
-    @media (min-width:1200px) {
-      padding-left: 20px;
-      padding-right: 20px;
-      flex-direction: row;
-      justify-content: flex-start;
-    }
+
+  }
+}
+.content-settings{
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  padding-top: 0;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-between;
+  @media (min-width:600px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  @media (min-width:1200px) {
+    padding-left: 20px;
+    padding-right: 20px;
+    flex-direction: row;
+    justify-content: flex-start;
   }
 }
