--- a/src/app/settings/session/session.component.html
+++ b/src/app/settings/session/session.component.html
@@ -1,3 +1,4 @@
+<div class="settings-content">
   <h3 class="settings-content__title">Session Time</h3>
   <div class="settings-content__subtitle">Time period, when you stayed logged in system after the last action</div>
   <form class="settings-form">
@@ -18,3 +19,4 @@
     </div>
     <button class="button settings-form__button settings-form__button--mt32">Save</button>
   </form>
+</div>
