new switch button, 2fa page, some style changes

--- a/src/app/settings/view/view.component.html
+++ b/src/app/settings/view/view.component.html
@@ -1,6 +1,10 @@
 <div class="settings-content settings-content--mob-asc">
   <h3 class="settings-content__title settings-content__title--mob-mb32">View</h3>
   <div class="settings__toggler-row">
-    <div class="toggler-button settings__toggler"><span class="toggler-button__indicate"></span></div><span class="settings__toggler-row-text">Enable colors for color-blinds</span>
+    <label for="" class="toggler-button settings__toggler">
+      <input type="checkbox" name="" value="">
+      <span class="toggler-button__indicate"></span>
+    </label>
+    <span class="settings__toggler-row-text">Enable colors for color-blinds</span>
   </div>
 </div>
