--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -43,16 +43,16 @@ b{
   width: 100%;
   box-sizing: border-box;
   margin: 0 auto;
-  padding: 12px 0px 60px;
+  padding: 0px 0px 60px;
   min-height: 100%;
   height: 100%;
   @media (min-width:600px) {
-    padding: 32px 12px 60px;
+    padding: 0px 12px 60px;
 
   }
   @media (min-width:1200px) {
     min-height: calc(100% - 75px);
-    padding: 32px 20px 75px;
+    padding: 0px 20px 75px;
 
   }
   &--settings{
@@ -70,11 +70,12 @@ b{
   @media (min-width:600px) {
     padding-left: 0;
     padding-right: 0;
+    margin-left: -12px;
+    margin-right: -12px;
   }
   @media (min-width:1200px) {
-    padding-left: 20px;
-    padding-right: 20px;
     flex-direction: row;
     justify-content: flex-start;
+    margin: 0;
   }
 }
