--- a/src/assets/scss/_table.scss
+++ b/src/assets/scss/_table.scss
@@ -233,7 +233,7 @@
   display: inline-block;
   width: 6px;
   height: 8px;
-  background-image: url("../img/arr-up-green.svg");
+  background-image: url("assets/img/arr-up-green.svg");
   background-size: cover;
   vertical-align: baseline;
 
@@ -255,7 +255,7 @@
   display: inline-block;
   width: 6px;
   height: 8px;
-  background-image: url("../img/arr-down-red.svg");
+  background-image: url("assets/img/arr-down-red.svg");
   background-size: cover;
   vertical-align: baseline;
 
