--- a/src/app/settings/email-notification/email-notification.component.html
+++ b/src/app/settings/email-notification/email-notification.component.html
@@ -1,18 +1,38 @@
 <div class="settings-content settings-content--mob-asc">
   <h3 class="settings-content__title settings-content__title--mob-mb32">Email Notifications</h3>
   <div class="settings__toggler-row">
-    <div class="toggler-button settings__toggler"><span class="toggler-button__indicate settings__bigger-toggler"></span></div><span class="settings__toggler-row-text">Input / output</span>
+    <label for="" class="toggler-button settings__toggler">
+      <input type="checkbox" name="" value="">
+      <span class="toggler-button__indicate"></span>
+    </label>
+    <span class="settings__toggler-row-text">Input / output</span>
   </div>
   <div class="settings__toggler-row">
-    <div class="toggler-button settings__toggler"><span class="toggler-button__indicate settings__bigger-toggler"></span></div><span class="settings__toggler-row-text">Orders</span>
+    <label for="" class="toggler-button settings__toggler">
+      <input type="checkbox" name="" value="">
+      <span class="toggler-button__indicate"></span>
+    </label>
+    <span class="settings__toggler-row-text">Orders</span>
   </div>
   <div class="settings__toggler-row">
-    <div class="toggler-button settings__toggler"><span class="toggler-button__indicate settings__bigger-toggler"></span></div><span class="settings__toggler-row-text">Account changes</span>
+    <label for="" class="toggler-button settings__toggler">
+      <input type="checkbox" name="" value="">
+      <span class="toggler-button__indicate"></span>
+    </label>
+    <span class="settings__toggler-row-text">Account changes</span>
   </div>
   <div class="settings__toggler-row">
-    <div class="toggler-button settings__toggler"><span class="toggler-button__indicate settings__bigger-toggler"></span></div><span class="settings__toggler-row-text">Notifications from administrators</span>
+    <label for="" class="toggler-button settings__toggler">
+      <input type="checkbox" name="" value="">
+      <span class="toggler-button__indicate"></span>
+    </label>
+    <span class="settings__toggler-row-text">Notifications from administrators</span>
   </div>
   <div class="settings__toggler-row">
-    <div class="toggler-button settings__toggler"><span class="toggler-button__indicate settings__bigger-toggler"></span></div><span class="settings__toggler-row-text">Other messages</span>
+    <label for="" class="toggler-button settings__toggler">
+      <input type="checkbox" name="" value="">
+      <span class="toggler-button__indicate"></span>
+    </label>
+    <span class="settings__toggler-row-text">Other messages</span>
   </div>
 </div>
