--- a/src/assets/scss/_toggler-button.scss
+++ b/src/assets/scss/_toggler-button.scss
@@ -1,34 +1,55 @@
 .toggler-button {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
+  display: inline-block;
   position: relative;
   width: 26px;
   height: 15px;
-  border-radius: 10px;
-  background-color: $light-grey;
-  align-items: center;
 
   &:hover {
     cursor: pointer;
   }
 
-  &--active {
-    background-color: $darker-blue;
+  input {
+    position: absolute;
+    left: 0;
+    height: 100%;
+    opacity: 0;
+    z-index: 3;
+
+    &:checked {
+      ~.toggler-button__indicate {
+        background-color: $darker-blue;
+
+        &:before {
+          -webkit-transform: translateX(11px);
+          -ms-transform: translateX(11px);
+          transform: translateX(11px);
+        }
+      }
+    }
   }
 }
 
 .toggler-button__indicate {
   display: inline-block;
+  background-color: $light-grey;
+  transition: 0.2s;
   position: absolute;
-  left: 1px;
-  width: 13px;
-  height: 13px;
-  border-radius: 50%;
-  background-color: #fff;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
 
-  &--active {
-    right: 1px;
-    left: auto;
+  &:before {
+    position: absolute;
+    content: "";
+    height: 13px;
+    width: 13px;
+    border-radius: 50%;
+    left: 1px;
+    bottom: 1px;
+    background-color: #fff;
+    -webkit-transition: 0.4s;
+    transition: 0.2s;
   }
 }
