--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@
 @import "./assets/scss/toggler-button";
 //@import "./assets/scss/dropdown";
 //@import "./assets/scss/table-top";
-//@import "./assets/scss/table";
+@import "./assets/scss/table";
 //@import "./assets/scss/under-table";
 //@import "./assets/scss/paginator";
 @import "./assets/scss/popup";
