--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -7,6 +7,9 @@
   background-color: $dark-indigo;
   @media (min-width:1200px) {
     display: block;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
   }
 }
 
