--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -33,7 +33,12 @@ b{
   color:$red;
 }
 .page-wrap {
-  height: 100%;
+  position: relative;
+  min-height: 100%;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  flex-direction: column;
 }
 
 
@@ -41,18 +46,24 @@ b{
   position: relative;
   max-width: 1280px;
   width: 100%;
+  flex-grow: 1;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  // height: 100%;
   box-sizing: border-box;
   margin: 0 auto;
   padding: 0px 0px 60px;
-  min-height: 100%;
-  height: 100%;
+  // min-height: 100%;
+  // height: calc(100% - 75px);
+  // height: 100%;
   @media (min-width:600px) {
     padding: 0px 12px 60px;
 
   }
   @media (min-width:1200px) {
-    min-height: calc(100% - 75px);
-    padding: 0px 20px 75px;
+    // min-height: 100%;
+    padding: 75px 20px 0px;
 
   }
   &--settings{
@@ -65,6 +76,7 @@ b{
   display: flex;
   padding-top: 0;
   height: 100%;
+  // min-height: calc(100vh - 150px);
   flex-direction: column;
   justify-content: space-between;
   @media (min-width:600px) {
