--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -5,7 +5,7 @@
   padding: 8px;
   @media (min-width:1200px) {
     order: 0;
-    padding: 32px 0 0;
+    padding: 32px 0 0px;
     max-width: 315px;
     border-top: 0;
     border-right: 1px solid $darker-white;
@@ -95,7 +95,7 @@
   box-sizing: border-box;
   flex-grow: 1;
   @media (min-width:1200px) {
-    padding: 32px 0 0 32px;
+    padding: 32px 0 0px 32px;
   }
 
   &--mob-asc {
@@ -484,7 +484,7 @@
       margin-left: 0;
     }
   }
-  
+
   &__toggler-row-text {
     order: 0;
     font-size: 18px;
