--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <app-header></app-header>
   <div class="content">
 
+    <!--<app-two-factor-popup></app-two-factor-popup>-->
     <router-outlet></router-outlet>
     <a class="chat" href="#"> <img class="chat__icon" src="../../../assets/img/help.svg"></a>
   </div>
