--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -1,3 +1,4 @@
+<!-- <div class="content content--settings"> -->
   <div class="settings-content">
     <h3 class="settings-content__title settings-content__title--mb32">Change password</h3>
     <form class="settings-form">
@@ -18,5 +19,11 @@
       <button class="button settings-form__button settings-form__button--mt32">Change password</button>
     </form>
   </div>
-  <div class="notification-popup change-pass-notif"><img class="notification-popup__icon" src="../../../assets/img/key.svg"><img class="notification-popup__close notification-popup__close--mob" src="../assets/img/close-grey.svg" alt="close"> Password sucessfully changed<img class="notification-popup__close" src="../assets/img/close-blue.svg"
-      alt="close"></div>
+  <div class="notification-popup change-pass-notif">
+    <img class="notification-popup__icon" src="../../../assets/img/key.svg">
+    <img class="notification-popup__close notification-popup__close--mob" src="../../../assets/img/close-grey.svg" alt="close">
+      Password successfully changed
+    <img class="notification-popup__close" src="../../../assets/img/close-blue.svg"  alt="close">
+
+  </div>
+<!-- </div> -->
