--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -6,6 +6,7 @@
     <ul class="settings-menu">
       <li class="settings-menu__item">
         <a class="settings-menu__link"
+           (providerSettingsEmitter) = "onUpdateProviderSetting($event)"
            [routerLinkActive]="['settings-menu__link--active']"
            [routerLink]="['/settings/two-factor-auth']">
           Two-Factor Authentication
