--- a/src/app/popups/two-factor-popup/two-factor-popup.component.html
+++ b/src/app/popups/two-factor-popup/two-factor-popup.component.html
@@ -1,5 +1,11 @@
-<div class="two-factor-popup">
-  <p>
-    two-factor-popup works!
-  </p>
+
+
+<div>
+  Here will be 5 cells with steps and info
+
+</div>
+
+<div>
+  Here will routing for steps component
+
 </div>
