added popup child elms and routing

--- a/src/app/popups/two-factor-popup/two-factor-popup.component.html
+++ b/src/app/popups/two-factor-popup/two-factor-popup.component.html
@@ -6,6 +6,6 @@
 </div>
 
 <div>
-  Here will routing for steps component
-
+  <!--Here all child pages will be loaded-->
+  <router-outlet></router-outlet>
 </div>
