--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,5 +25,5 @@
 @import "./assets/scss/select";
 /*----- CONTENT END -----*/
 //@import "./assets/scss/footer";
-// @import "./assets/scss/modal";
+@import "./assets/scss/modal";
 @import "./assets/scss/chat-btn";
