--- a/src/app/popups/two-factor-popup/two-factor-popup.component.html
+++ b/src/app/popups/two-factor-popup/two-factor-popup.component.html
@@ -20,11 +20,11 @@
         <span class="steps__counter-val">4</span>/4</div>
       <div class="modal__header-mob-controls">
         <a class="modal__control-mob" href="#">
-          <img class="modal__control-icon" src="img/minimize-mob-blue.svg"></a>
+          <img class="modal__control-icon" src="../../../assets/img/minimize-mob-blue.svg"></a>
         <a class="modal__control-mob" href="#">
-          <img class="modal__control-icon" src="img/learn-blue.svg"></a>
+          <img class="modal__control-icon" src="../../../img/learn-blue.svg"></a>
         <a class="modal__control-mob" href="#">
-          <img class="modal__control-icon" src="img/close-blue.svg"></a>
+          <img class="modal__control-icon" src="../../../img/close-blue.svg"></a>
       </div>
     </div>
     <div class="modal__header">
